# warpforth

./: CLAUDE.md  CMakeLists.txt  README.md  pyproject.toml  warpforthc
.github/workflows/: ci.yml
cmake/modules/: FindMLIR.cmake
demo/: README.md  attention.forth  attention.ptx  gpt2_generate.py  warpforth.py
docs/: language.md
examples/: README.md  all_operations.forth  complex_expression.forth  simple_arithmetic.forth  stack_operations.forth
gpu_test/: conftest.py  pyproject.toml  test_basic.py  test_kernels.py
include/: CMakeLists.txt
include/warpforth/Conversion/: CMakeLists.txt  Passes.h  Passes.td
include/warpforth/Conversion/ForthToGPU/: ForthToGPU.h
include/warpforth/Conversion/ForthToMemRef/: ForthToMemRef.h
include/warpforth/Dialect/Forth/: CMakeLists.txt  ForthDialect.h  ForthDialect.td  ForthOps.h  ForthOps.td
include/warpforth/Translation/: ForthImporter.h
include/warpforth/Translation/ForthToMLIR/: ForthToMLIR.h
include/warpforth/Translation/MLIRToPTX/: MLIRToPTX.h
lib/: CMakeLists.txt
lib/Bitcode/: CMakeLists.txt
lib/Conversion/: CMakeLists.txt  Passes.cpp
lib/Conversion/ForthToGPU/: CMakeLists.txt  ForthToGPU.cpp
lib/Conversion/ForthToMemRef/: CMakeLists.txt  ForthToMemRef.cpp
lib/Dialect/: CMakeLists.txt
lib/Dialect/Forth/: CMakeLists.txt  ForthDialect.cpp  ForthOps.cpp
lib/Translation/: CMakeLists.txt  ForthImporter.cpp
lib/Translation/ForthToMLIR/: CMakeLists.txt  ForthToMLIR.cpp  ForthToMLIR.h
lib/Translation/MLIRToPTX/: CMakeLists.txt  MLIRToPTX.cpp
test/: CMakeLists.txt  custom-words.forth  example.forth  lit.cfg.py  lit.site.cfg.py.in  stack-ops.forth  test-gpu-indexing.forth  test-multi-param.forth
test/Conversion/ForthToGPU/: basic-gpu-wrap.mlir  intrinsic-conversion.mlir  private-functions.mlir  shared-memory.mlir
test/Conversion/ForthToMemRef/: arithmetic.mlir  barrier.mlir  begin-until.mlir  begin-while-repeat.mlir  bitwise.mlir  comparison.mlir  control-flow.mlir  do-loop.mlir  float-arithmetic.mlir  float-math-intrinsics.mlir  float-memory.mlir  leave.mlir  literal.mlir  memory-ops.mlir  narrow-memory.mlir  nested-control-flow.mlir  param-ref.mlir  reduced-width-memory.mlir  stack-init.mlir  stack-manipulation.mlir  user-defined-words.mlir
test/Pipeline/: attention.forth  barrier.forth  begin-until.forth  begin-while-repeat.forth  control-flow.forth  do-loop.forth  exit.forth  float-math-intrinsics.forth  float-pipeline.forth  full-pipeline.forth  interleaved-control-flow.forth  leave.forth  local-variables.forth  matmul-naive.forth  multi-param.forth  narrow-memory.forth  nested-control-flow.forth  plus-loop-negative.forth  plus-loop.forth  reduced-width-memory.forth  scalar-param.forth  shared-memory.forth  unloop-exit.forth
test/Translation/Forth/: arithmetic-ops.forth  barrier.forth  basic-literals.forth  begin-begin-repeat-mismatch-error.forth  begin-then-mismatch-error.forth  begin-until.forth  begin-while-repeat.forth  bitwise-ops.forth  case-insensitive.forth  comparison-ops.forth  control-flow.forth  do-loop.forth  else-without-if-error.forth  exit-outside-word-error.forth  exit.forth  float-arithmetic.forth  float-comparison.forth  float-conversion.forth  float-literals.forth  float-math-intrinsics.forth  float-memory.forth  float-params.forth  gpu-indexing.forth  header-directive-after-code-error.forth  header-duplicate-kernel-error.forth  header-duplicate-param-error.forth  header-missing-kernel-error.forth  header-shared-param-duplicate-error.forth  header-unknown-directive-error.forth  if-repeat-mismatch-error.forth  if-until-mismatch-error.forth  interleaved-control-flow.forth  leave-conditional.forth  leave.forth  local-variables-control-flow.forth  local-variables-error-outside-word.forth  local-variables-error-param-conflict.forth  local-variables-error-shared-conflict.forth  local-variables-error.forth  local-variables.forth  (+24 more)
tools/: CMakeLists.txt  warpforth-runner.cpp
tools/warpforth-opt/: CMakeLists.txt  warpforth-opt.cpp
tools/warpforth-runner/: CMakeLists.txt  warpforth-runner.cpp
tools/warpforth-translate/: CMakeLists.txt  warpforth-translate.cpp
tools/warpforthc/: CMakeLists.txt  warpforthc.cpp
