[project]
name = "warpforth"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "lit>=18.1.0",
    "pytest",
    "vastai-sdk",
]

[dependency-groups]
dev = ["ruff", "pytest-timeout"]

[tool.pytest.ini_options]
markers = ["gpu: marks tests requiring GPU execution via Vast.ai"]
timeout = 600
testpaths = ["gpu_test"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "COM812", "ISC001"]

[tool.ruff.lint.per-file-ignores]
"gpu_test/test_*.py" = ["S101", "PLR2004"]
"gpu_test/conftest.py" = ["S603", "S607", "PLR0913", "PLR2004"]
